General fixes + SEO Fixes

--- a/site/about.html
+++ b/site/about.html
@@ -1,6 +1,13 @@
 ---
 title: About
 permalink: /about/
+seo:
+  description: 
+  canonical_url: 
+  featured_image: 
+  author_twitter_handle: 
+  og_type:
+  noindex: false
 content_blocks:
   - _bookshop_name: about/hero
     title: On a mission to change email marketing
@@ -39,7 +46,7 @@ content_blocks:
     title: We love what we do
     description: Our team has decades of experience working with email marketing campaigns and we’re passionate about helping you connect with your customers.
     btn:
-      link: https://www.linkedin.com/company/staticmania/
+      link: https://www.linkedin.com/
       text: Follow on Linkedin
     video:
       image_path: /images/works/banner.jpg
