--- a/site/contact.html
+++ b/site/contact.html
@@ -1,6 +1,13 @@
 ---
 title: Contact
 permalink: /contact/
+seo:
+  description: 
+  canonical_url: 
+  featured_image: 
+  author_twitter_handle: 
+  og_type:
+  noindex: false
 content_blocks:
   - _bookshop_name: contact/hero
     title: Let's talk.
