--- a/site/login.html
+++ b/site/login.html
@@ -1,6 +1,13 @@
 ---
 permalink: /login/
 title: Login
+seo:
+  description: 
+  canonical_url: 
+  featured_image: 
+  author_twitter_handle: 
+  og_type:
+  noindex: false
 content_blocks:
   - _bookshop_name: global/login
     title: Log In
