--- a/site/pricing.html
+++ b/site/pricing.html
@@ -1,6 +1,13 @@
 ---
 title: Pricing
 permalink: /pricing/
+seo:
+  description: 
+  canonical_url: 
+  featured_image: 
+  author_twitter_handle: 
+  og_type:
+  noindex: false
 content_blocks:
   - _bookshop_name: pricing/hero
     title: A plan for everyone
