--- a/site/signup.html
+++ b/site/signup.html
@@ -1,6 +1,13 @@
 ---
 title: Sign Up
 permalink: /signup/
+seo:
+  description: 
+  canonical_url: 
+  featured_image: 
+  author_twitter_handle: 
+  og_type:
+  noindex: false
 content_blocks:
   - _bookshop_name: global/signup
     title: Create Account
