--- a/site/feature.html
+++ b/site/feature.html
@@ -1,6 +1,13 @@
 ---
 title: Feature
 permalink: /feature/
+seo:
+  description: 
+  canonical_url: 
+  featured_image: 
+  author_twitter_handle: 
+  og_type:
+  noindex: false
 content_blocks:
   - _bookshop_name: feature/hero
     title: Run the best campaigns
@@ -36,7 +43,7 @@ content_blocks:
   - _bookshop_name: global/feature
     image_path: /images/feature/feature-card-three.png
     title: Free templates to get you started
-    description: "SendIt is used by everyone from small businesses to fortune 500 companies. Browse our collection of email marketing templates and start sending beautiful emails in minutes."
+    description: "Sendit is used by everyone from small businesses to fortune 500 companies. Browse our collection of email marketing templates and start sending beautiful emails in minutes."
     btn:
       link: /signup
       text: Try This Free
