--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,13 @@
 ---
 permalink: /
 title: Home
+seo:
+  description: 
+  canonical_url: 
+  featured_image: 
+  author_twitter_handle: 
+  og_type:
+  noindex: false
 content_blocks:
   - _bookshop_name: home/hero
     title: Beautiful email campaigns
@@ -63,7 +70,7 @@ content_blocks:
   - _bookshop_name: global/feature
     image_path: /images/feature/feature-card-three.png
     title: "100% free uploads"
-    description: "SendIt is used by everyone from small businesses to fortune 500 companies. Browse our collection of email marketing templates and start sending beautiful emails in minutes."
+    description: "Sendit is used by everyone from small businesses to fortune 500 companies. Browse our collection of email marketing templates and start sending beautiful emails in minutes."
     btn:
       link: /signup
       text: Try This Free
