--- a/site/privacy.html
+++ b/site/privacy.html
@@ -1,13 +1,20 @@
 ---
 permalink: /privacy/
 title: Privacy
+seo:
+  description: 
+  canonical_url: 
+  featured_image: 
+  author_twitter_handle: 
+  og_type:
+  noindex: false
 content_blocks:
   - _bookshop_name: privacy/hero
     title: Terms & Condition
   - _bookshop_name: privacy/privacy
     privacy:
       - key: descriptive
-        heading: SendIt Terms And Conditions
+        heading: Sendit Terms And Conditions
         description: "A slider is great way to display a slideshow. The WordPress sites being easy to use, offers many plugins for slider. You could imagine slideshows in your head and make them true on the screen."
       - key: bulletpoints
         heading: Account Information & Payments
