--- a/site/contact.html
+++ b/site/contact.html
@@ -2,11 +2,11 @@
 title: Contact
 permalink: /contact/
 seo:
-  description: 
+  page_description: 
   canonical_url: 
   featured_image: 
   author_twitter_handle: 
-  og_type:
+  open_graph_type:
   noindex: false
 content_blocks:
   - _bookshop_name: contact/hero
@@ -36,6 +36,6 @@ content_blocks:
       message:
         heading: Your Messages
         placeholder: Enter your message
-      submit_btn:
+      submit_button:
         text: Send message
 ---
