--- a/site/privacy.html
+++ b/site/privacy.html
@@ -2,11 +2,11 @@
 permalink: /privacy/
 title: Privacy
 seo:
-  description: 
+  page_description: 
   canonical_url: 
   featured_image: 
   author_twitter_handle: 
-  og_type:
+  open_graph_type:
   noindex: false
 content_blocks:
   - _bookshop_name: privacy/hero
