--- a/site/signup.html
+++ b/site/signup.html
@@ -2,11 +2,11 @@
 title: Sign Up
 permalink: /signup/
 seo:
-  description: 
+  page_description: 
   canonical_url: 
   featured_image: 
   author_twitter_handle: 
-  og_type:
+  open_graph_type:
   noindex: false
 content_blocks:
   - _bookshop_name: global/signup
@@ -25,7 +25,7 @@ content_blocks:
       checkbox_text: By registering, you accept our Conditions, Use Policy and
         Privacy Notice.
       signup_text: Create an Account
-      login_btn:
+      login_button:
         link: /login
         text: Log In
 ---
