--- a/site/404.html
+++ b/site/404.html
@@ -5,12 +5,13 @@ layout: error
 content_blocks:
   - _bookshop_name: global/error
     description: Something is wrong here!
-    image_path: /images/404/error.png
+    image: /images/404/error.png
+    image_alt: Error illustration
 seo:
-  description: 
+  page_description: 
   canonical_url: 
   featured_image: 
   author_twitter_handle: 
-  og_type: 
+  open_graph_type: 
   no_index: true
 ---
