--- a/site/about.html
+++ b/site/about.html
@@ -2,24 +2,27 @@
 title: About
 permalink: /about/
 seo:
-  description: 
+  page_description: 
   canonical_url: 
   featured_image: 
   author_twitter_handle: 
-  og_type:
+  open_graph_type:
   noindex: false
 content_blocks:
   - _bookshop_name: about/hero
     title: On a mission to change email marketing
     description: We're here to breathe new air into email marketing and help grow your business.
     hero_images:
-      - image_path: /images/about/aboutfeature-two.jpg
-        placer: "front_buttom"
-      - image_path: /images/about/aboutfeature-three.jpg
-        placer: "back_top_right"
-      - image_path: /images/about/aboutfeature-four.jpg
-        placer: "back_top_left"
-    btn:
+      - image: /images/about/aboutfeature-two.jpg
+        image_alt: People working on laptops
+        placement: "front_buttom"
+      - image: /images/about/aboutfeature-three.jpg
+        image_alt: Group working on a laptop
+        placement: "back_top_right"
+      - image: /images/about/aboutfeature-four.jpg
+        image_alt: Staff group photo
+        placement: "back_top_left"
+    button:
       text: "Try This Free"
       link: "/signup"
 
@@ -45,11 +48,12 @@ content_blocks:
   - _bookshop_name: about/video
     title: We love what we do
     description: Our team has decades of experience working with email marketing campaigns and we’re passionate about helping you connect with your customers.
-    btn:
+    button:
       link: https://www.linkedin.com/
       text: Follow on Linkedin
     video:
-      image_path: /images/works/banner.jpg
+      image: /images/works/banner.jpg
+      image_alt: Thumbnail image for video
       link: https://vimeo.com/45830194
 
   - _bookshop_name: about/team
@@ -57,33 +61,41 @@ content_blocks:
     team_members:
       - name: Nikolas Mcconnell
         designation: Co-Founder & CEO
-        image_path: /images/team/1.jpg
+        image: /images/team/1.jpg
+        image_alt: "Team member: Nikolas Mcconnell"
 
       - name: Keiren Mcculloch
         designation: CMO
-        image_path: /images/team/2.jpg
+        image: /images/team/2.jpg
+        image_alt: "Team member: Keiren Mcculloch"
 
       - name: Piers Reyes
         designation: Head of Marketing
-        image_path: /images/team/3.jpg
+        image: /images/team/3.jpg
+        image_alt: "Team member: Piers Reyes"
 
       - name: Zachary Arias
         designation: Co-founder & CTO
-        image_path: /images/team/4.jpg
+        image: /images/team/4.jpg
+        image_alt: "Team member: Zachary Arias"
 
       - name: Harmony Dunlop
         designation: Head of Sales
-        image_path: /images/team/5.jpg
+        image: /images/team/5.jpg
+        image_alt: "Team member: Harmony Dunlop"
 
       - name: Elize Schwartz
         designation: CRO
-        image_path: /images/team/6.jpg
+        image: /images/team/6.jpg
+        image_alt: "Team member: Elize Schwartz"
 
       - name: Coen Simmons
         designation: Head of Design
-        image_path: /images/team/7.jpg
+        image: /images/team/7.jpg
+        image_alt: "Team member: Coen Simmons"
 
       - name: Fran Figureson
         designation: Head of People
-        image_path: /images/team/8.jpg
+        image: /images/team/8.jpg
+        image_alt: "Team member: Fran Figureson"
 ---
