--- a/site/login.html
+++ b/site/login.html
@@ -2,11 +2,11 @@
 permalink: /login/
 title: Login
 seo:
-  description: 
+  page_description: 
   canonical_url: 
   featured_image: 
   author_twitter_handle: 
-  og_type:
+  open_graph_type:
   noindex: false
 content_blocks:
   - _bookshop_name: global/login
@@ -18,9 +18,9 @@ content_blocks:
       heading: Email Address
       placeholder: Your Email
     checkbox_text: Remember Me
-    signin_btn:
+    signin_button:
       text: "Log In"
-    signup_btn:
+    signup_button:
       link: "/signup"
       text: "Create an Account"
 ---
