--- a/site/pricing.html
+++ b/site/pricing.html
@@ -2,11 +2,11 @@
 title: Pricing
 permalink: /pricing/
 seo:
-  description: 
+  page_description: 
   canonical_url: 
   featured_image: 
   author_twitter_handle: 
-  og_type:
+  open_graph_type:
   noindex: false
 content_blocks:
   - _bookshop_name: pricing/hero
@@ -40,7 +40,7 @@ content_blocks:
             is_active: false
           - item: Unlimited activity history
             is_active: false
-        btn:
+        button:
           link: /signup
           text: Try This Free
       - tier: Pro
@@ -68,7 +68,7 @@ content_blocks:
             is_active: false
           - item: Unlimited activity history
             is_active: false
-        btn:
+        button:
           link: /signup
           text: Try This Free
       - tier: Business
@@ -96,7 +96,7 @@ content_blocks:
             is_active: true
           - item: Unlimited activity history
             is_active: true
-        btn:
+        button:
           link: /signup
           text: Try This Free
 
