--- a/site/index.html
+++ b/site/index.html
@@ -1,20 +1,13 @@
 ---
 permalink: /
 title: Home
-seo:
-  page_description: 
-  canonical_url: 
-  featured_image: 
-  author_twitter_handle: 
-  open_graph_type:
-  noindex: false
 content_blocks:
   - _bookshop_name: home/hero
     title: Beautiful email campaigns
     description: With Sendit, you can quickly create beautiful rich emails that capture a reader's attention, engage them, and convert them into customers.
     image: /images/hero/hero-image-2.png
     image_alt: Reports dashboard
-    link:
+    button:
       text: Try This Free
       url: /signup
 
@@ -22,11 +15,11 @@ content_blocks:
     title: Scale your
     title_suffix: Business
     description: We have an extensive library of pre-written sales emails, proven marketing templates, and more to get you started on your next project.
-    alternateStyle: false
+    alternate_style: false
     numbers:
-      - number: 200
+      - prefix: $
+        number: 200
         suffix: m
-        prefix: $
         text: Venture capital raised
       - number: 2016
         text: Established in
@@ -45,7 +38,7 @@ content_blocks:
   - _bookshop_name: global/header
     title: "Sendit "
     title_suffix: Features
-    no_top_pad: true
+    remove_top_padding: true
     description: >-
       Our platform offers the most advanced features including automated
       email content creation, dynamic personalization, and customer
