--- a/site/about.html
+++ b/site/about.html
@@ -32,9 +32,9 @@ content_blocks:
     description: We've built Sendit from the ground up the help grow your business faster.
     alternate_style: true
     numbers:
-      - number: 200
+      - prefix: $
+        number: 200
         suffix: m
-        prefix: $
         text: Venture capital raised
       - number: 2016
         text: Established in
