--- a/site/pricing.html
+++ b/site/pricing.html
@@ -17,85 +17,88 @@ content_blocks:
     pricing_tier:
       - tier: Free
         description: Everything you need to get started.
+        currency_symbol: $
         price: 0
         has_discount: false
         discount_price: 0
-        is_active: false
-        feature:
+        highlight_tier: false
+        features:
           - item: 1 Email Campaign
-            is_active: true
+            active_feature: true
           - item: 1 Year Premium Support
-            is_active: true
+            active_feature: true
           - item: Regular Update for 1 Year
-            is_active: true
+            active_feature: true
           - item: 90+ Widgets & Extensions
-            is_active: true
+            active_feature: true
           - item: 23+ Templates
-            is_active: true
+            active_feature: true
           - item: Over 800 Section Blocks
-            is_active: false
+            active_feature: false
           - item: Support
-            is_active: false
+            active_feature: false
           - item: 3 filters
-            is_active: false
+            active_feature: false
           - item: Unlimited activity history
-            is_active: false
+            active_feature: false
         button:
           link: /signup
           text: Try This Free
       - tier: Pro
         description: More collaborative power and unlimited boards for fast-growing.
+        currency_symbol: $
         price: 199
         has_discount: true
         discount_price: 125
-        is_active: true
-        feature:
+        highlight_tier: true
+        features:
           - item: 1 Email Campaign
-            is_active: true
+            active_feature: true
           - item: 1 Year Premium Support
-            is_active: true
+            active_feature: true
           - item: Regular Update for 1 Year
-            is_active: true
+            active_feature: true
           - item: 90+ Widgets & Extensions
-            is_active: true
+            active_feature: true
           - item: 23+ Templates
-            is_active: true
+            active_feature: true
           - item: Over 800 Section Blocks
-            is_active: true
+            active_feature: true
           - item: Support
-            is_active: false
+            active_feature: false
           - item: 3 filters
-            is_active: false
+            active_feature: false
           - item: Unlimited activity history
-            is_active: false
+            active_feature: false
         button:
           link: /signup
           text: Try This Free
       - tier: Business
         description: For starters Includes unlimited members
+        currency_symbol: $
         price: 499
         has_discount: true
         discount_price: 350
-        is_active: false
-        feature:
+        highlight_tier: false
+        features:
           - item: 1 Email Campaign
-            is_active: true
+            active_feature: true
           - item: 1 Year Premium Support
-            is_active: true
+            active_feature: true
           - item: Regular Update for 1 Year
-            is_active: true
+            active_feature: true
           - item: 90+ Widgets & Extensions
-            is_active: true
+            active_feature: true
           - item: 23+ Templates
-            is_active: true
+            active_feature: true
           - item: Over 800 Section Blocks
-            is_active: true
+            active_feature: true
           - item: Support
-            is_active: true
+            active_feature: true
           - item: 3 filters
-            is_active: true
+            active_feature: true
           - item: Unlimited activity history
-            is_active: true
+            active_feature: true
         button:
           link: /signup
           text: Try This Free
@@ -103,7 +106,7 @@ content_blocks:
   - _bookshop_name: global/faq
     title: Have
     title_suffix: Questions?
-    description: The stats are in our favour. SaaSFlow doesn't just help you with your email marketing, we get you customer relationships that last.
+    description: We believe that a good email marketing strategy is the key to growth. So we’re helping you grow your business with tools and resources that make email marketing easy.
     FAQ:
       - title: Is there a maximum numbers of emails I can send each month?
         description: No, the prices include unlimited emails. Send to your heart's content.
