Updated 1 file via CloudCannon.

--- a/site/pages/test.html
+++ b/site/pages/test.html
@@ -20,10 +20,10 @@ content_blocks:
       - image: /images/about/aboutfeature-two.jpg
         image_alt: People working
         placement: front_buttom
-      - image: /images/about/aboutfeature-two.png
+      - image: /images/about/aboutfeature-two.jpg
         image_alt: People working
         placement: back_top_left
-      - image: /images/about/aboutfeature-two.png
+      - image: /images/about/aboutfeature-two.jpg
         image_alt: People working
         placement: back_top_right
     button:
