updates test page

--- a/site/pages/test.html
+++ b/site/pages/test.html
@@ -17,13 +17,13 @@ content_blocks:
       we’re helping you grow your business with tools and resources that make
       email marketing easy.
     hero_images:
-      - image: /images/about/aboutfeature-two.png
+      - image: /images/about/aboutfeature-two.jpg
         image_alt: People working
         placement: front_buttom
-      - image: /images/about/aboutfeature-two.png
+      - image: /images/about/aboutfeature-two.jpg
         image_alt: People working
         placement: back_top_left
-      - image: /images/about/aboutfeature-two.png
+      - image: /images/about/aboutfeature-two.jpg
         image_alt: People working
         placement: back_top_right
     button:
@@ -34,11 +34,11 @@ content_blocks:
     team_members:
       - name: Cody Fisher
         designation: Co-Founder & CEO
-        image: /images/team/team-member-1.jpg
+        image: /images/team/1.jpg
         image_alt: 'Team member: Cody Fisher'
       - name: Cody Fisher
         designation: Co-Founder & CEO
-        image: /images/team/team-member-1.jpg
+        image: /images/team/1.jpg
         image_alt: 'Team member: Cody Fisher'
   - _bookshop_name: about/video
     title: We Love our works
