--- a/site/pages/test.html
+++ b/site/pages/test.html
@@ -17,13 +17,13 @@ content_blocks:
       we’re helping you grow your business with tools and resources that make
       email marketing easy.
     hero_images:
-      - image: /images/about/aboutfeature-two.jpg
+      - image: /images/about/aboutfeature-two.png
         image_alt: People working
         placement: front_buttom
-      - image: /images/about/aboutfeature-two.jpg
+      - image: /images/about/aboutfeature-two.png
         image_alt: People working
         placement: back_top_left
-      - image: /images/about/aboutfeature-two.jpg
+      - image: /images/about/aboutfeature-two.png
         image_alt: People working
         placement: back_top_right
     button:
@@ -34,11 +34,11 @@ content_blocks:
     team_members:
       - name: Cody Fisher
         designation: Co-Founder & CEO
-        image: /images/team/1.jpg
+        image: /images/team/team-member-1.jpg
         image_alt: 'Team member: Cody Fisher'
       - name: Cody Fisher
         designation: Co-Founder & CEO
-        image: /images/team/1.jpg
+        image: /images/team/team-member-1.jpg
         image_alt: 'Team member: Cody Fisher'
   - _bookshop_name: about/video
     title: We Love our works
@@ -151,6 +151,14 @@ content_blocks:
     remove_top_padding: false
   - _bookshop_name: privacy/hero
     title: Terms & Condition
+  - _bookshop_name: privacy/privacy
+    terms_and_conditions:
+      - heading: Sendit Terms And Conditions
+        description: >-
+          <p>By using Sendit, you agree to the terms and conditions listed on
+          this page.</p><p>Sendit may change the terms on this page. We will
+          take steps to notify you when this occurs, but you are responsible for
+          staying up-to-date with these changes.</p>
   - _bookshop_name: home/hero
     title: Email Marketing is Future for Grow Your Business Revenues
     description: >-
@@ -200,14 +208,17 @@ content_blocks:
         button:
           link: /login
           text: Try This Free
-  - _bookshop_name: privacy/privacy
-    terms_and_conditions:
-      - heading: Sendit Terms And Conditions
-        description: >-
-          <p>By using Sendit, you agree to the terms and conditions listed on
-          this page.</p><p>Sendit may change the terms on this page. We will
-          take steps to notify you when this occurs, but you are responsible for
-          staying up-to-date with these changes.</p>
+      - tier: free
+        description: For starters Includes unlimited members
+        currency_symbol: $
+        price: 0
+        has_discount: false
+        discount_price: 0
+        highlight_tier: false
+        features: []
+        button:
+          link: /login
+          text: Try This Free
   - _bookshop_name: global/signup
     title: Create Account
     form:
